# XML_Lib

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  LICENSE.txt  README.md  XML_Config.h.in  XML_Lib_Standards_Report.md  namespace_implementation_plan.md  notes.txt  stdafx.h
examples/: CMakeLists.txt  XML_Analyze_File.cpp  XML_Create_At_Runtime.cpp  XML_Parse_File.cpp  XML__Fibonacci.cpp
examples/files/: bookstore.xml  bookstore.xsd  testfile001.xml
examples/include/: XML_Analyzer.hpp  XML_Utility.hpp
examples/source/: XML_Analyze_File.cpp  XML_Create_At_Runtime.cpp  XML_DTD_Validation_Example.cpp  XML_Deep_Nesting_Example.cpp  XML_Encoding_Example.cpp  XML_Entity_Reference_Example.cpp  XML_Large_Attributes_Example.cpp  XML_Malformed_Example.cpp  XML_Mixed_Content_Example.cpp  XML_Parse_File.cpp  XML_Whitespace_Example.cpp  XML_XPath_Basic.cpp  XML_XPath_Functions.cpp  XML_XPath_Predicates.cpp  XML_XSD_Attributes_Example.cpp  XML_XSD_Basic_Validation.cpp  XML_XSD_File_Validation.cpp  XML_XSD_Type_Restrictions.cpp  XML__Fibonacci.cpp
tests/: CMakeLists.txt
tests/DTD/: DTD_Parse_Attributes.cpp  DTD_Parse_Entity.cpp  DTD_Parse_Misc.cpp  DTD_Parse_Tags.cpp  DTD_Stringify.cpp  DTD_Validate_Attributes.cpp  DTD_Validate_Elements.cpp  DTD_parse_attributes.cpp  DTD_parse_entity.cpp  DTD_parse_misc.cpp  DTD_parse_tags.cpp  DTD_stringify.cpp  DTD_validate_attributes.cpp  DTD_validate_elements.cpp  XML_Lib_Tests_DTD_Parse_Attributes.cpp  XML_Lib_Tests_DTD_Parse_Entity.cpp  XML_Lib_Tests_DTD_Parse_Misc.cpp  XML_Lib_Tests_DTD_Validate_Attributes.cpp  XML_Lib_Tests_DTD_Validate_Elements.cpp  XML_Lib_Tests_DTD_Validate_Misc.cpp
tests/IO/: IDestination.cpp  ISource.cpp  XML_Lib_Tests_IDestination.cpp  XML_Lib_Tests_ISource.cpp
tests/XML/: XML_Helper.cpp  XML_Lib_Tests_Helper.cpp  XML_Lib_Tests_Parse_Attributes.cpp  XML_Lib_Tests_Parse_CDATA.cpp  XML_Lib_Tests_Parse_Comments.cpp  XML_Lib_Tests_Parse_Declaration.cpp  XML_Lib_Tests_Parse_Entities.cpp  XML_Lib_Tests_Parse_Files.cpp  XML_Lib_Tests_Parse_Misc.cpp  XML_Lib_Tests_Parse_Namespace.cpp  XML_Lib_Tests_Parse_PI.cpp  XML_Lib_Tests_Parse_Root.cpp  XML_Lib_Tests_Parse_Tags.cpp  XML_Lib_Tests_Parse_Unicode.cpp  XML_Lib_Tests_Stringify.cpp  XML_Lib_Tests_XML.cpp  XML_Parse_Attributes.cpp  XML_Parse_CDATA.cpp  XML_Parse_Comments.cpp  XML_Parse_Declaration.cpp  XML_Parse_Entities.cpp  XML_Parse_Files.cpp  XML_Parse_Misc.cpp  XML_Parse_Namespace.cpp  XML_Parse_PI.cpp  XML_Parse_Root.cpp  XML_Parse_Tags.cpp  XML_Parse_Unicode.cpp  XML_Stringify.cpp  XML_helper.cpp  XML_parse_attributes.cpp  XML_parse_cdata.cpp  XML_parse_comments.cpp  XML_parse_declaration.cpp  XML_parse_entities.cpp  XML_parse_files.cpp  XML_parse_misc.cpp  XML_parse_namespace.cpp  XML_parse_pi.cpp  XML_parse_root.cpp  (+3 more)
tests/XNode/: XML_LIb_Tests_XEntityReference.cpp  XML_Lib_Tests_Variant.cpp  XML_Lib_Tests_XCDATA.cpp  XML_Lib_Tests_XComment.cpp  XML_Lib_Tests_XContent.cpp  XML_Lib_Tests_XElement.cpp  XML_Lib_Tests_XPI.cpp  XML_Lib_Tests_XProlog.cpp  XML_Lib_Tests_XRoot.cpp  XML_Lib_Tests_XSelf.cpp
tests/data/: XML_Lib_Tests_Attribute.cpp  XML_Lib_Tests_External_Reference.cpp  XML_Lib_Tests_Value.cpp
tests/dtd/: XML_Lib_Tests_DTD_Parse_Attributes.cpp  XML_Lib_Tests_DTD_Parse_Entity.cpp  XML_Lib_Tests_DTD_Parse_Misc.cpp  XML_Lib_Tests_DTD_Parse_Tags.cpp  XML_Lib_Tests_DTD_Stringify.cpp  XML_Lib_Tests_DTD_Validate_Attributes.cpp  XML_Lib_Tests_DTD_Validate_Elements.cpp
tests/entitymapper/: XML_Lib_Tests_Entity_Mapper.cpp  XML_Lib_Tests_Entitymapper.cpp  XML_Lib_Tests_External_Reference.cpp
tests/files/: conditional002.dtd  conditional005.dtd  conditional006.dtd  conditional008.dtd  conditional010.dtd  report01.dtd  report02.dtd  testfile002.xml  testfile003.xml  testfile004.xml  testfile006.xml  testfile007.xml  testfile008.xml  testfile009.xml  testfile011.xml  testfile012.xml  testfile013.xml  testfile014.xml  testfile017.xml  testfile018.xml  testfile019.xml
tests/files/xpath/: bookstore.xml
tests/files/xsd/: complex_attributes.xsd  complex_choice.xsd  complex_sequence.xsd  simple_enum.xsd  simple_integer.xsd  simple_length.xsd  simple_pattern.xsd  simple_string.xsd
tests/include/: XML_Lib_Tests.hpp  XML_Tests.hpp  XML_tests.hpp
tests/include/mocks/: Mock_IAction.hpp  Mock_IParser.hpp  Mock_ISource.hpp
tests/io/: XML_Lib_Tests_File.cpp  XML_Lib_Tests_IDestination.cpp  XML_Lib_Tests_ISource.cpp
tests/source/data/: XML_Lib_Tests_Attribute.cpp  XML_Lib_Tests_External_Reference.cpp  XML_Lib_Tests_Value.cpp
tests/source/dtd/: XML_Lib_Tests_DTD_Parse_Attributes.cpp  XML_Lib_Tests_DTD_Parse_Attributes_Error.cpp  XML_Lib_Tests_DTD_Parse_Attributes_Misc.cpp  XML_Lib_Tests_DTD_Parse_Entity.cpp  XML_Lib_Tests_DTD_Parse_Misc.cpp  XML_Lib_Tests_DTD_Parse_Tags.cpp  XML_Lib_Tests_DTD_Stringify.cpp  XML_Lib_Tests_DTD_Validate_Attributes.cpp  XML_Lib_Tests_DTD_Validate_Elements.cpp  XML_Lib_Tests_DTD_Validate_Misc.cpp
tests/source/embedded/: XML_Lib_Tests_Embedded.cpp
tests/source/entitymapper/: XML_Lib_Tests_Entity_Mapper.cpp
tests/testData/: conditional001.dtd  conditional003.dtd  conditional004.dtd  conditional007.dtd  conditional009.dtd  name.txt  note002.dtd  testfile005.xml  testfile008.xml  testfile010.xml
tests/traverse/: XML_Lib_Tests_Traverse.cpp
tests/xml/: XML_Lib_Tests_Helper.cpp  XML_Lib_Tests_Parse_Attributes.cpp  XML_Lib_Tests_Parse_CDATA.cpp  XML_Lib_Tests_Parse_Comments.cpp  XML_Lib_Tests_Parse_Declaration.cpp  XML_Lib_Tests_Parse_Entities.cpp  XML_Lib_Tests_Parse_Files.cpp  XML_Lib_Tests_Parse_Misc.cpp  XML_Lib_Tests_Parse_Namespace.cpp  XML_Lib_Tests_Parse_PI.cpp  XML_Lib_Tests_Parse_Root.cpp  XML_Lib_Tests_Parse_Unicode.cpp  XML_Lib_Tests_Stringify.cpp  XML_Lib_Tests_XML.cpp
tests/xnode/: XML_LIb_Tests_XEntityReference.cpp  XML_Lib_Tests_Variant.cpp  XML_Lib_Tests_XCDATA.cpp  XML_Lib_Tests_XComment.cpp  XML_Lib_Tests_XContent.cpp  XML_Lib_Tests_XDTD.cpp  XML_Lib_Tests_XDeclaration.cpp  XML_Lib_Tests_XElement.cpp  XML_Lib_Tests_XPI.cpp  XML_Lib_Tests_XProlog.cpp  XML_Lib_Tests_XRoot.cpp  XML_Lib_Tests_XSelf.cpp
(+410 files in other folders)
